--- a/index.html
+++ b/index.html
@@ -6,26 +6,32 @@
 
 	<body>
 		<pre>
+			<input type="text" id="in" onkeyup="push()">
 			<code class="javascript" id="code"></code>
 		</pre>
 
 		<script type="text/javascript">
-			var connection = new WebSocket('ws://localhost:8080/', 'echo-protocol');
+			var connection = new WebSocket('ws://'+document.location.host+'/', 'echo-protocol');
 
 			connection.onerror = function (error) {
 				console.log('WebSocket Error ' + error);
 			};
 
-			connection.onopen = function () {
-				var number = Math.round(Math.random() * 0xFFFFFF);
-				connection.send(number.toString());
-			};
+			// connection.onopen = function () {
+			// 	var number = Math.round(Math.random() * 0xFFFFFF);
+			// 	connection.send(number.toString());
+			// };
 
 			connection.onmessage = function (message) {
 				document.querySelector("code").innerHTML = message.data;
-
-				console.log('Server: ' + message.data);
+				// console.log('Server: ' + message.data);
 			};
+
+			function push() {
+				var x = document.getElementById("in");
+
+    			connection.send(x.value);
+			}
 		</script>
 	</body>
 </html>
