--- a/public/in.html
+++ b/public/in.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Training</title>
+		<title>Training input</title>
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/styles/github.min.css">
 		<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/highlight.min.js"></script>
 		<script>
@@ -14,6 +14,13 @@
 	</head>
 
 	<body>
+		<div>
+			<textarea rows="20" cols="100" id="in" onkeyup="push()">
+				function bootstrap () {
+					var a := 1;
+				}
+			</textarea>
+		</div>
 		<pre>
 			<code class="javascript" id="code"></code>
 		</pre>
@@ -25,9 +32,19 @@
 				console.log('WebSocket Error ' + error);
 			};
 
-			connection.onmessage = function (message) {
-				document.querySelector("code").innerHTML = message.data;
+			connection.onopen = function () {
+				connection.send(document.getElementById("in").innerHTML);
 			};
+
+			connection.onmessage = function (message) {
+				document.getElementById("code").innerHTML = message.data;
+			};
+
+			function push() {
+				var x = document.getElementById("in");
+
+    			connection.send(x.value);
+			}
 		</script>
 	</body>
 </html>
