--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>Training</title>
-		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/styles/github.min.css">
-		<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/highlight.min.js"></script>
+		<link rel="stylesheet" href="assets/css/github.min.css">
+		<script src="assets/js/highlight.min.js"></script>
 		<script>
 			hljs.configure({
 				tabReplace: '    ',
